==> jncronin/gk/Firmware-v4/Infineon_AIROC-Wi-Fi-Bluetooth-STM32_1.7.1/Middlewares/Third_Party/lpa/helpers/net_activity/COMPONENT_MBED/network_activity_handler.cpp <==
#include "mbed.h"
#include "WhdSTAInterface.h"
#include "WhdOlmInterface.h"
#include "tcpip.h"
#include "network_activity_handler.h"
#define IDLE_POWER_MODE_STRING_LEN (32)
#define PACKET_PAYLOAD             (1500)
#define HARDCODED_STR   "Some random stuff"

static void cylpa_print_whd_bus_stats(WhdSTAInterface *wifi)
{
    WHD_EMAC& whd_emac = static_cast<WHD_EMAC&>(wifi->get_emac());
    if (whd_emac.powered_up)
    {
        NW_INFO(("\n=====================================================\n"));
        (void)whd_print_stats(whd_emac.drvp, WHD_FALSE);
        NW_INFO(("=====================================================\n"));
    }
    else
    {
        NW_INFO(("EMAC interface is not powered on, bus_stats are unavailable\n"));
    }
}

int32_t wait_net_suspend(void *net_intf, uint32_t wait_ms,
        uint32_t network_inactive_interval_ms,
        uint32_t network_inactive_window_ms)

{
    int32_t state;
    uint32_t result, flags;
    us_timestamp_t start, end;
    char idle_power_mode[IDLE_POWER_MODE_STRING_LEN];
    static bool emac_activity_callback_registered = false;
    WhdSTAInterface *wifi = (WhdSTAInterface *) net_intf;

    if (false == emac_activity_callback_registered)
    {
        register_emac_activity_callback(static_cast<WhdSTAInterface*>(wifi));
        emac_activity_callback_registered = true;
    }

    sleep_manager_lock_deep_sleep();
    state = cylpa_wait_net_inactivity(network_inactive_interval_ms, network_inactive_window_ms);

    if (ST_SUCCESS == state)
    {
        /* Suspend network stack.
         * State data (e.g. caches) may be adjusted here so that the stack resumes properly.
         */
        state = cylpa_suspend_ns();
        if (ST_SUCCESS == state)
        {
            cylpa_get_idle_power_mode(idle_power_mode, sizeof(idle_power_mode));
            wifi->net_suspended();
            NW_INFO(("\nNetwork Stack Suspended, MCU will enter %s power mode\n", idle_power_mode));
            sleep_manager_unlock_deep_sleep();
            flags = (RX_EVENT_FLAG | TX_EVENT_FLAG);

            start = mbed_uptime();
            /* Wait till there is emac activity. */
            result = cy_rtos_waitbits_event(&cy_lp_wait_net_event, &flags, true, false, wait_ms);
            if (CY_RTOS_TIMEOUT == result)
            {
                state = ST_WAIT_TIMEOUT_EXPIRED;
            }
            else
            {
                state = ST_NET_ACTIVITY;
            }

            end = mbed_uptime();
            cy_rtos_get_mutex(&cy_lp_mutex, wait_ms);
            sleep_manager_lock_deep_sleep();
            wifi->net_resuming();
            /* Resume the network stack.
             * State data (e.g. caches) may be adjusted here so that the stack resumes properly.
            */
            NW_INFO(("Resuming Network Stack, Network stack was suspended for %llums\n", (end-start)/1000));
            cy_dsleep_nw_suspend_time += end-start;
            cylpa_print_whd_bus_stats(wifi);
            cylpa_resume_ns();
            cylpa_network_state_handler(state);
            cy_rtos_set_mutex(&cy_lp_mutex);
        }
    }

    sleep_manager_unlock_deep_sleep();
    return state;
}

int cy_tcp_create_socket_connection ( void *netif_if, void **global_socket, const char *remote_ip, uint16_t remote_port, uint16_t local_port,
		                              cy_tko_ol_cfg_t *tko_ol_cfg, int socket_keepalive_enable )
{
    int response;
    int data_length = 0;
    int len;
    nsapi_error_t ns_ret;
    int32_t cfg_interval;
    int32_t retry_interval;
    TCPSocket *socket_ptr = NULL;
    SocketAddress src_sockaddress;
    SocketAddress remote_sockaddress;
    WhdSTAInterface *wifi_intf = (WhdSTAInterface *)netif_if;
    NetworkInterface *networkInterface;

    networkInterface = (NetworkInterface *)wifi_intf;

    if ( wifi_intf == NULL )
    {
        OL_LOG_TKO(LOG_OLA_LVL_ERR, "Network Interface is not up !\n");
    	return NSAPI_ERROR_NO_CONNECTION;
    }

    *global_socket = new TCPSocket();
    socket_ptr = (TCPSocket *)*global_socket;

    if ( socket_ptr == NULL )
    {
        OL_LOG_TKO(LOG_OLA_LVL_ERR, "TCP socket create failed\n" );
    	return NSAPI_ERROR_NO_SOCKET;
    }

    /* Create TCP Socket */
    response = socket_ptr->open((NetworkInterface *)wifi_intf);
    if (response != NSAPI_ERROR_OK)
    {
        OL_LOG_TKO(LOG_OLA_LVL_ERR, "TCP open failed ret:%d\n", response);
        delete socket_ptr;
        *global_socket = NULL;
        return response;
    }

    networkInterface->get_ip_address(&src_sockaddress);
    src_sockaddress.set_port(local_port);

    /* Bind socket to local port */
    response = socket_ptr->bind(src_sockaddress);
    if (response != NSAPI_ERROR_OK)
    {
        OL_LOG_TKO(LOG_OLA_LVL_ERR, "TCP socket bind failed response: %d\n", response);
        socket_ptr->close();
        delete socket_ptr;
        *global_socket = NULL;
        return response;
    }

    remote_sockaddress.set_ip_address((const char*)remote_ip);
    remote_sockaddress.set_port(remote_port);

    /* Establish TCP Connection */
    socket_ptr->set_timeout(-1);
    response = socket_ptr->connect(remote_sockaddress);
    if (response != NSAPI_ERROR_OK)
    {
        OL_LOG_TKO(LOG_OLA_LVL_ERR, "TCP connect failed to IP %s local port:%d remote port:%d err=%d\n",
                   remote_ip, local_port, remote_port, response);
        socket_ptr->close();
        delete socket_ptr;
        *global_socket = NULL;
        return response;
    }

    OL_LOG_TKO(LOG_OLA_LVL_DEBUG, "Created TCP connection to IP %s, local port %d, remote port %d\n",
               remote_ip, local_port, remote_port);

    /* Use socket level tko, while host is awake */
    cfg_interval = tko_ol_cfg->interval * 1000;    /* keep_idle, After this much idle time, send Packet */
    retry_interval = tko_ol_cfg->retry_interval * 1000;    /* keep_intvl, if don't get ack retry in this many seconds */

    if ( socket_keepalive_enable)
    {
        ns_ret = socket_ptr->setsockopt(NSAPI_SOCKET, NSAPI_KEEPIDLE, &cfg_interval, sizeof(cfg_interval));
        if (ns_ret != NSAPI_ERROR_OK)
        {
            OL_LOG_TKO(LOG_OLA_LVL_ERR, "TCP keepalive Idle time configuration failed :%d\n", ns_ret );
            socket_ptr->close();
            delete socket_ptr;
            *global_socket = NULL;
            return ns_ret;
        }

        ns_ret = socket_ptr->setsockopt(NSAPI_SOCKET, NSAPI_KEEPINTVL, &retry_interval, sizeof(retry_interval));
        if (ns_ret != NSAPI_ERROR_OK)
        {
            OL_LOG_TKO(LOG_OLA_LVL_ERR, "TCP keepalive interval time configuration failed :%d\n", ns_ret );
            socket_ptr->close();
            delete socket_ptr;
            *global_socket = NULL;
            return ns_ret;
        }

        ns_ret = socket_ptr->setsockopt(NSAPI_SOCKET, NSAPI_KEEPALIVE, &socket_keepalive_enable, sizeof(socket_keepalive_enable));
        if (ns_ret != NSAPI_ERROR_OK)
        {
            OL_LOG_TKO(LOG_OLA_LVL_ERR, "Host TCP keepalive enable failed %d\n", ns_ret );
            socket_ptr->close();
            delete socket_ptr;
            *global_socket = NULL;
            return ns_ret;
        }
    }

    OL_LOG_TKO(LOG_OLA_LVL_DEBUG, "setsockopt LWIP keepalive: Interval %ld, Retry Interval %ld, keepalive value %d\n",
               cfg_interval, retry_interval, socket_keepalive_enable );

    len = strlen(HARDCODED_STR);
    memcpy(cy_tcp_databuf, HARDCODED_STR, len);
    data_length = socket_ptr->send(cy_tcp_databuf, len);
    if (len != data_length)
    {
        OL_LOG_TKO(LOG_OLA_LVL_ERR, "Could only send %d bytes on socket of request length err: %ld\n", (unsigned int)data_length, len );
    }
    cylpa_tko_ol_update_config(remote_ip, remote_port, local_port, tko_ol_cfg);
    return response;
}

int cylpa_restart_olm( ol_desc_t *offload_list , void *netif )
{
    WhdOlmInterface *old_olm;
    WhdSTAInterface *wifi_intf = (WhdSTAInterface *)netif;
    if ( ( offload_list == NULL ) ||  (wifi_intf == NULL ) )
    {
        return NSAPI_ERROR_PARAMETER;
    }
    old_olm = olm;
    WhdOlmInterface *new_olm = new WhdOlmInterface(offload_list);
    if (new_olm != NULL)
    {
         if (!wifi_intf->set_olm(new_olm))
         {
             OL_LOG_TKO(LOG_OLA_LVL_ERR, "%s() ERROR: restart OLM cannot be done during connected state \n", __func__);
             return NSAPI_ERROR_PARAMETER;
         }
         if (old_olm != NULL)
         {
             olm = new_olm;
             delete old_olm;
         }
    }
    return NSAPI_ERROR_OK;
}
