==> jncronin/gk/Firmware-v4/Infineon_AIROC-Wi-Fi-Bluetooth-STM32_1.7.1/Middlewares/Third_Party/lpa/helpers/net_activity/COMPONENT_SECURE_SOCKETS/network_activity_handler.c <==
#include "network_activity_handler.h"
#include "cyabs_rtos.h"
#include "cy_network_mw_core.h"
#include "cy_OlmInterface.h"
#include "whd_int.h"
#include <cycfg_system.h>
#include "cyhal.h"
#include <lwip/tcpip.h>
#include <lwip/api.h>
#include <lwip/tcp.h>
#include <lwip/priv/tcp_priv.h>
#include "cy_nw_helper.h"
#include "cy_secure_sockets.h"
#include "cy_tls.h"
#define IDLE_POWER_MODE_STRING_LEN (32)
#define PACKET_PAYLOAD 1500
#define HARDCODED_STR   "Some random stuff"

static void cylpa_print_whd_bus_stats(struct netif *wifi)
{
    whd_interface_t ifp = NULL;
    if (wifi->flags & NETIF_FLAG_UP)
    {
        ifp = cy_olm_get_whd_interface();
        if (ifp == NULL)
        {
           return;
        }

        NW_INFO(("\n=====================================================\n"));
        (void)whd_print_stats(ifp->whd_driver, WHD_FALSE);
        NW_INFO(("=====================================================\n"));
    }
    else
    {
        NW_INFO(("Wi-Fi interface is not powered on, bus_stats are unavailable\n"));
    }
}

int32_t wait_net_suspend(void *net_intf, uint32_t wait_ms, uint32_t network_inactive_interval_ms,
        uint32_t network_inactive_window_ms)
{
    int32_t state;
    uint32_t result, flags;
    char idle_power_mode[IDLE_POWER_MODE_STRING_LEN];
    static bool emac_activity_callback_registered = false;
    struct netif *wifi = (struct netif *)cy_network_get_nw_interface( CY_NETWORK_WIFI_STA_INTERFACE, CY_NETWORK_WIFI_STA_INTERFACE );
    cy_time_t lp_start_time;
    cy_time_t lp_end_time;

    if (false == emac_activity_callback_registered)
    {
        cylpa_network_act_handler_init();
        emac_activity_callback_registered = true;
    }

    cyhal_syspm_lock_deepsleep();
    state = cylpa_wait_net_inactivity(network_inactive_interval_ms, network_inactive_window_ms);

    if (ST_SUCCESS == state)
    {
        /* Suspend network stack.
         * State data (e.g. caches) may be adjusted here so that the stack resumes properly.
         */
        state = cylpa_suspend_ns();
        if (ST_SUCCESS == state)
        {
            cy_rtos_clearbits_event(&cy_lp_wait_net_event, (uint32_t)(TX_EVENT_FLAG | RX_EVENT_FLAG), false);

            cylpa_get_idle_power_mode(idle_power_mode, sizeof(idle_power_mode));
            cylpa_olm_dispatch_pm_notification(cy_get_olm_instance(), OL_PM_ST_GOING_TO_SLEEP);
            NW_INFO(("\nNetwork Stack Suspended, MCU will enter %s power mode\n", idle_power_mode));
            cyhal_syspm_unlock_deepsleep();
            flags = (RX_EVENT_FLAG | TX_EVENT_FLAG);

            cy_rtos_get_time( &lp_start_time);

            /* Wait till there is emac activity. */
            result = cy_rtos_waitbits_event(&cy_lp_wait_net_event, &flags, true, false, wait_ms);
            if (CY_RTOS_TIMEOUT == result)
            {
                state = ST_WAIT_TIMEOUT_EXPIRED;
            }
            else
            {
                state = ST_NET_ACTIVITY;
            }

            cy_rtos_get_time( &lp_end_time);

            if(lp_end_time > lp_start_time)
            {
                lp_end_time = (lp_end_time-lp_start_time);
            }
            else
            {
                lp_end_time = (lp_start_time-lp_end_time);
            }

            cy_rtos_get_mutex(&cy_lp_mutex, wait_ms);

            cyhal_syspm_lock_deepsleep();
            /* Resume the network stack.
             * State data (e.g. caches) may be adjusted here so that the stack resumes properly.
            */
            NW_INFO(("Resuming Network Stack, Network stack was suspended for %ums\n",(unsigned int) lp_end_time));
            cy_dsleep_nw_suspend_time += lp_end_time;
            cylpa_print_whd_bus_stats(wifi);

            /* Update state to timeout expired even if event is set after timeout is expired as
             * xEventGroupWaitBits function returns the current bit for timeout scenario with
             * OOB disabled
             */
            if (lp_end_time > wait_ms) {
                state = ST_WAIT_TIMEOUT_EXPIRED;
            }
            cylpa_network_state_handler(state);
            cylpa_resume_ns();
            /* Call OLM API to reset back the configurations */
            cylpa_olm_dispatch_pm_notification(cy_get_olm_instance(), OL_PM_ST_AWAKE);
            cy_rtos_set_mutex(&cy_lp_mutex);
        }
    }

    cyhal_syspm_unlock_deepsleep();
    return state;
}

int cy_tcp_create_socket_connection( void *net_intf, void **global_socket_ptr, const char *remote_ip, uint16_t remote_port, uint16_t local_port,
                                          cy_tko_ol_cfg_t *downloaded, int socket_keepalive_enable)
{
    cy_rslt_t response = CY_RSLT_SUCCESS;
    cy_socket_sockaddr_t remote_addr = {0};
    cy_nw_ip_address_t nw_ip_addr;
    struct netif *net = NULL;
    int32_t seconds, retry_count;
#if LWIP_TCP
    uint32_t sock_handle;
    cy_socket_sockaddr_t sockaddr;
#endif

    if (net_intf == NULL )
    {
        OL_LOG_TKO(LOG_OLA_LVL_DEBUG, "Network is not up!\n");
        return CY_RSLT_TCPIP_ERROR;
    }

    int len = strlen(HARDCODED_STR);
    uint32_t bytes_sent = 0;

    net = (struct netif *)net_intf;

    cy_nw_str_to_ipv4((const char *)remote_ip, &nw_ip_addr);
    remote_addr.ip_address.version = CY_SOCKET_IP_VER_V4;
    remote_addr.ip_address.ip.v4 = nw_ip_addr.ip.v4;
    remote_addr.port = remote_port;
    sockaddr.ip_address.version = CY_SOCKET_IP_VER_V4;
    sockaddr.ip_address.ip.v4 = net->ip_addr.u_addr.ip4.addr;
    sockaddr.port = local_port;

    OL_LOG_TKO(LOG_OLA_LVL_DEBUG, "TCP remote IP Address %s  remote port:%d\n", remote_ip, remote_port );

    /* Create TCP Socket */
    response = cy_socket_create(CY_SOCKET_DOMAIN_AF_INET, CY_SOCKET_TYPE_STREAM, CY_SOCKET_IPPROTO_TCP, (cy_socket_t *)&sock_handle);
    if (response != CY_RSLT_SUCCESS)
    {
        OL_LOG_TKO(LOG_OLA_LVL_ERR, "TCP socket create failed ret:%ld\n", response);
        return response;
    }

    /* Bind socket to local port */
    response = cy_socket_bind((void * )sock_handle, &sockaddr, (uint32_t)sizeof(cy_socket_sockaddr_t));
    if ( CY_RSLT_SUCCESS != response)
    {
        cy_socket_delete((void *)sock_handle);
        OL_LOG_TKO(LOG_OLA_LVL_ERR, "TCP socket bind failed response: %ld\n", response);
        return response;
    }

    /* Establish TCP Connection */
    response = cy_socket_connect((void *)sock_handle, &remote_addr, (uint32_t)sizeof(cy_socket_sockaddr_t));

    if ( response != CY_RSLT_SUCCESS )
    {
        OL_LOG_TKO(LOG_OLA_LVL_ERR, "TCP connect failed to IP %s local port:%d remote port:%d err=%ld\n",
                   remote_ip, local_port, remote_port, response);
        cy_socket_delete((void *)sock_handle);
        return response;
    }

    OL_LOG_TKO(LOG_OLA_LVL_DEBUG, "Created TCP connection to IP %s, local port %d, remote port %d\n",
               remote_ip, local_port, remote_port);

#if LWIP_TCP
    if (socket_keepalive_enable)
    {
        response = cy_socket_setsockopt((void *)sock_handle, CY_SOCKET_SOL_SOCKET,
                                         CY_SOCKET_SO_TCP_KEEPALIVE_ENABLE, &socket_keepalive_enable,
                                         sizeof(socket_keepalive_enable));

        if ( response != CY_RSLT_SUCCESS)
        {
            OL_LOG_TKO(LOG_OLA_LVL_ERR, "Host TCP keepalive enable failed %ld\n", response );
        }

        seconds = downloaded->retry_interval * 1000;
    	response = cy_socket_setsockopt((void *)sock_handle, CY_SOCKET_SOL_TCP,
                                        CY_SOCKET_SO_TCP_KEEPALIVE_INTERVAL,
                                        &seconds, sizeof(seconds));

        if ( response != CY_RSLT_SUCCESS )
        {
            OL_LOG_TKO(LOG_OLA_LVL_ERR, "TCP keepalive interval time configuration failed :%ld\n", response );
        }

        retry_count = downloaded->retry_count;
        response = cy_socket_setsockopt((void *)sock_handle, CY_SOCKET_SOL_TCP,
                                        CY_SOCKET_SO_TCP_KEEPALIVE_COUNT,
                                        &retry_count, sizeof(retry_count));

        if ( response != CY_RSLT_SUCCESS )
        {
            OL_LOG_TKO(LOG_OLA_LVL_ERR, "TCP keepalive retry count configuration failed :%ld\n", response );
        }

        seconds = downloaded->interval * 1000;
        response = cy_socket_setsockopt((void *)sock_handle, CY_SOCKET_SOL_TCP,
                                        CY_SOCKET_SO_TCP_KEEPALIVE_IDLE_TIME,
                                        &seconds, sizeof(seconds ));

        if ( response != CY_RSLT_SUCCESS )
        {
            OL_LOG_TKO(LOG_OLA_LVL_ERR, "TCP keepalive Idle time configuration failed :%ld\n", response );
        }
        OL_LOG_TKO(LOG_OLA_LVL_DEBUG, "setsockopt LWIP keepalive: Interval %d, Retry Interval %d, keepalive value %d\n",
                   downloaded->interval, downloaded->retry_interval, downloaded->interval);
    }
#endif

    memcpy(cy_tcp_databuf, HARDCODED_STR, len);
    response = cy_socket_send((void *)sock_handle, cy_tcp_databuf, len, NETCONN_NOFLAG, &bytes_sent);
    if (response != CY_RSLT_SUCCESS)
    {
        OL_LOG_TKO(LOG_OLA_LVL_ERR, "Could only send %u bytes on socket of request length err: %ld\n", (unsigned int)bytes_sent, response );
    }

    *global_socket_ptr = (void *)sock_handle;
    cylpa_tko_ol_update_config(remote_ip, remote_port, local_port, downloaded);
    return response;
}

int cylpa_restart_olm( ol_desc_t *offload_list , void *net_intf )
{
	olm_t *olm_ptr = (olm_t *)cy_get_olm_instance();
	const ol_desc_t *oflds_list = (const ol_desc_t *)offload_list;
	cylpa_olm_deinit(olm_ptr);
	cylpa_olm_init(olm_ptr, oflds_list);
	return CY_RSLT_SUCCESS;
}
